[package]
name = "base58id"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A short, human-readable identifier for infrequently generated records"
repository = "https://github.com/yujingaya/base58id"

keywords = ["base58", "identifier", "unique"]
categories = ["encoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]